tests/NormalTests/paczka1/fuzzy1/96794485.err
Error in line 8: swhX5tlN S543 36,3
Error in line 10: swhX5tlN A401 57,2
Error in line 14: Ig6ZaJz9 A169 0,5
Error in line 21: WLsv S543 31,0
Error in line 27: 6Hy0DtN A169 29,8
Error in line 37: 6Hy0DtN A169 79,6
